# cenxiv

./: .cursorignore  .env_example  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
articles/: __init__.py  admin.py  alibabaCloudTranslator.py  apps.py  categories_description_dict.json  categories_dict.json  groups_dict.json  models.py  tasks.py  tencentCloudTranslator.py  translators.py  urls.py  utils.py  views.py
articles/controllers/: __init__.py  abs_page.py  catchup_page.py  openurl_cookie.py  prevnext.py  year.py  years_operating.py
articles/controllers/archive_page/: __init__.py  by_month_form.py
articles/controllers/files/: __init__.py  dissemination.py
articles/controllers/list_page/: __init__.py  author.py  paging.py
articles/locale/zh_Hans/LC_MESSAGES/: django.po
articles/migrations/: 0001_initial.py  0002_article_unique_article_version.py
articles/static/admin/js/: title_cn_preview.js
articles/templates/abs/: abs.html  bookmarking.html  cite.html  labs_tabs.html
articles/templates/admin/articles/: abstract_cn_widget.html  title_cn_widget.html
articles/templates/archive/: archive_list_all.html  single_archive.html
articles/templates/articles/: 404.html  archive.html  article_list.html  author_search.html  base.html  catchup.html  catchup_form.html  cn_pdf_preview.html  donate.html  format.html  home.html  no_cn_pdf.html  year.html
articles/templates/list/: all.html  base.html  month.html  new.html  recent.html  year.html
articles/templatetags/: article_filters.py
cenxiv/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/nginx/: default.conf.template
config/supervisor/: supervisord.conf
config/uwsgi/: uwsgi.ini
locale/zh_Hans/LC_MESSAGES/: django.po
