[tool.poetry]
name = "cenxiv"
version = "0.1.0"
description = "arXiv in Chinese (CN) and English (En)."
authors = ["zuoshifan <sfzuo@bao.ac.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
django = "^5.1.4"
mtranslate = "^1.8"
requests = "^2.32.3"
# arxivapi = { path = "../arxiv-api" }
# arxiv-base = { path = "../arxiv-base" }
# browse = { path = "../arxiv-browse" }
# latextranslate = { path = "../latextranslate" }
arxivapi = { git = "https://github.com/cenXiv/arxiv-api", branch = "cenxiv" }
arxiv-base = { git = "https://github.com/cenXiv/arxiv-base", branch = "cenxiv" }
browse = { git = "https://github.com/cenXiv/arxiv-browse", branch = "cenxiv" }
latextranslate = { git = "https://github.com/cenXiv/latextranslate", branch = "main" }
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
python-decouple = "^3.8"
translators = "^5.9.3"
pymemcache = "^4.0.0"
celery = "^5.4.0"
psycopg = {extras = ["binary"], version = "^3.2.4"}
uwsgi = "^2.0.28"
django-db-connection-pool = {extras = ["postgresql"], version = "^1.2.5"}
ollama = "^0.4.7"
tencentcloud-sdk-python = "^3.0.1320"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
